# probo-11

./: .gitignore  README.md  franka.repos  test.md
documentation/: GIT.md
install/: local_setup.sh  setup.sh
log/: latest_build
src/controleurs/: CMakeLists.txt  package.xml
src/controleurs/src/: controleur_rail.cpp  initial_pose_controller.cpp  test_node.cpp
src/fr3_sonde_moveit_config/: CMakeLists.txt  package.xml
src/fr3_sonde_moveit_config/config/: fr3_ros_controllers.yaml  fr3_sur_rail_controllers.yaml  kinematics.yaml
src/fr3_sonde_moveit_config/launch/: moveit.launch.py
src/franka_sonde/: CMakeLists.txt  package.xml
src/franka_sonde/launch/: project.launch.py  rail-sur_table.launch.py  test.launch.py
src/franka_sonde/meshes/: sonde.stl
src/franka_sonde/rviz/: fr3_sur_rail.rviz  robot_complet.rviz  trm.rviz
src/franka_sonde/urdf/: fr3_sur_rail.xacro  rail_sur_table.xacro  robot_complet.srdf.xacro  sonde_robot_rail.xacro
