<?xml version="1.0"?>
<package format="3">
  <name>franka_sonde</name>
  <version>0.0.1</version>
  <description>Le projet PROBO n° 11 de l'ecole Centrale</description>

  <maintainer email="hhamzi.in@gmail.com">Hamza</maintainer>
  <license>Apache-2.0</license>
  <author>Hamza Haytoumi</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>franka_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
